--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "rusty-battery"
 version = "0.1.0"
+description = "CLI tool to help you care about your device's battery health."
+repository = "https://github.com/kucera-lukas/rusty-battery"
+readme = "README.md"
+license = "MIT"
+keywords = ['cli', "battery-life", "desktop-notifications"]
+categories = ['command-line-utilities']
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -10,3 +16,6 @@ structopt = "0.3"
 regex = "1.5.4"
 notify-rust = "4"
 lazy_static = "1.4.0"
+
+[dev-dependencies]
+clippy = "0.0.302"
