--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3"
-regex = "1.5.4"
+thiserror = "1.0.29"
+battery = "0.7.8"
 notify-rust = "4"
-lazy_static = "1.4.0"
 
 [dev-dependencies]
 clippy = "0.0.302"
