--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: Test Suite
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - master
+
+  pull_request:
 
 jobs:
   lint:
@@ -9,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        toolchain: [ stable ]
+        toolchain: [ stable, beta, nightly ]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
