--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,8 @@ jobs:
       - name: Run cargo check
         uses: actions-rs/cargo@v1
         with:
-          command: check --verbose --all-features --workspace
+          command: check
+          args: --verbose --all-features --workspace
 
       - name: Run cargo fmt
         uses: actions-rs/cargo@v1
