--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,19 @@ jobs:
         with:
           command: test
           args: --verbose --all-features --workspace
+
+      - name: Run cargo-tarpaulin
+        uses: actions-rs/tarpaulin@v0.1
+        with:
+          out-type: Xml
+
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: cobertura.xml
