--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,9 @@ jobs:
           profile: minimal
           toolchain: ${{ matrix.toolchain }}
 
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v1.3.0
+
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
