--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -26,7 +26,7 @@ jobs:
           override: true
 
       - name: Check
-      - uses: actions-rs/clippy-check@v1
+        uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
