--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,11 +39,15 @@ jobs:
           args: --verbose --all-features --workspace
 
       - name: Run cargo-tarpaulin
+        if: ${{ matrix.os }} == 'ubuntu-latest' &&
+            ${{ matrix.toolchain }} == 'stable'
         uses: actions-rs/tarpaulin@v0.1
         with:
           out-type: Xml
 
       - name: Upload to codecov.io
+        if: ${{ matrix.os }} == 'ubuntu-latest' &&
+            ${{ matrix.toolchain }} == 'stable'
         uses: codecov/codecov-action@v2
         with:
           file: ./cobertura.xml
@@ -51,6 +55,8 @@ jobs:
           vebose: true
 
       - name: Archive code coverage results
+        if: ${{ matrix.os }} == 'ubuntu-latest' &&
+            ${{ matrix.toolchain }} == 'stable'
         uses: actions/upload-artifact@v2
         with:
           name: code-coverage-report
