--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,18 @@ keywords = ['cli', "battery-life", "desktop-notifications"]
 categories = ['command-line-utilities']
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+# cli
 structopt = "0.3"
+
+# error handling
 thiserror = "1.0.29"
+
+# logging
+chrono = "0.4.19"
+env_logger = "0.9.0"
+log = "0.4.14"
+
+# application dependencies
 battery = "0.7.8"
 notify-rust = "4"
