--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,20 +23,14 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v2.3.4
 
-      - name: Install minimal ${{ matrix.toolchain }}
-        uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: ${{ matrix.toolchain }}
+      - name: Install ${{ matrix.toolchain }}
+        uses: dtolnay/rust-toolchain@${{ matrix.toolchain }}
 
       - name: Rust Cache
         uses: Swatinem/rust-cache@v1.3.0
 
       - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --verbose --all-features --workspace
+        run: cargo test --verbose --all-features --workspace
 
       - name: Run cargo-tarpaulin
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.toolchain == 'stable'}}
