--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3"
-thiserror = "1.0.29"
-chrono = "0.4.19"
-env_logger = "0.9.0"
-log = "0.4.14"
 battery = "0.7.8"
 notify-rust = "4"
+cached = "0.25.0"
+thiserror = "1.0.29"
+env_logger = "0.9.0"
+log = "0.4.14"
+chrono = "0.4.19"
