--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "rusty-battery"
 version = "0.1.3"
-description = "CLI tool to help you care about your device's battery health."
-repository = "https://github.com/kucera-lukas/rusty-battery"
-readme = "README.md"
-license = "MIT"
-keywords = ['cli', "battery-life", "desktop-notification", "kdeconnect"]
-categories = ['command-line-utilities']
 edition = "2018"
+description = "CLI tool to help you care about your device's battery health."
+documentation = "https://kucera-lukas.github.io/rusty-battery/"
+readme = "README.md"
+homepage = "https://kucera-lukas.github.io/rusty-battery/"
+repository = "https://github.com/kucera-lukas/rusty-battery"
+license = "MIT"
+keywords = ['cli', "battery", "notification", "kdeconnect", "linux"]
+categories = ['command-line-utilities']
 
 [dependencies]
 structopt = "0.3"
