--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,8 +4,16 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "**.rs"
+      - Cargo.toml
+      - Cargo.lock
 
   pull_request:
+    paths:
+      - "**.rs"
+      - Cargo.toml
+      - Cargo.lock
 
 jobs:
   lint:
