--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        toolchain: [ stable ]
+        toolchain: [ nightly ]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
