feat(pre-commit): add prettier
Signed-off-by: Lukas Kucera <85391931+kucera-lukas@users.noreply.github.com>

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -25,11 +25,5 @@
   language: system
   files: ^(.+\.rs|Cargo\.(toml|lock))$
   types: [rust]
-  args: [
-      "--all-targets",
-      "--all-features",
-      "--",
-      "-D",
-      "warnings",
-  ]
+  args: ["--all-targets", "--all-features", "--", "-D", "warnings"]
   pass_filenames: false
