--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,8 +22,8 @@ repos:
       - id: cargo-check
       - id: clippy
 
-  - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.16.0
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
     hooks:
-      - id: gitlint
-        args: [ "--contrib=CT1", "--msg-filename" ]
+      - id: prettier
+        name: Prettier
