add clippy cargo category
Signed-off-by: Lukas Kucera <85391931+kucera-lukas@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 ci:
   skip: [cargo-fmt, cargo-check, clippy]
 
+default_stages: [commit]
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
