add rust cache to clippy check gh action
Signed-off-by: Lukas Kucera <85391931+kucera-lukas@users.noreply.github.com>

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -30,7 +30,10 @@ jobs:
           components: clippy
           override: true
 
-      - name: Check
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.0.0
+
+      - name: CLippy Check
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
