update step name
Signed-off-by: Lukas Kucera <85391931+kucera-lukas@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Git Checkout
         uses: actions/checkout@v3
 
-      - name: Install minimal ${{ matrix.toolchain }} with clippy
+      - name: Install minimal ${{ matrix.toolchain }} with rustfmt and clippy
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
