feat: update continuous integration (#117)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "rusty-battery"
 version = "0.2.1"
-edition = "2018"
+edition = "2021"
 description = "CLI tool to help you care about your device's battery health."
 documentation = "https://kucera-lukas.github.io/rusty-battery/"
 readme = "README.md"
 homepage = "https://kucera-lukas.github.io/rusty-battery/"
 repository = "https://github.com/kucera-lukas/rusty-battery"
 license = "MIT"
-keywords = ['cli', "battery", "notification", "kdeconnect", "linux"]
-categories = ['command-line-utilities']
+keywords = ["cli", "battery", "notification", "kdeconnect", "linux"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 structopt = "0.3"
