--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -13,15 +13,16 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ubuntu-latest]
+        toolchain: [stable]
 
     runs-on: ${{ matrix.os }}
 
     steps:
       - name: Git Checkout
-        uses: actions/checkout@v2.3.5
+        uses: actions/checkout@v3
 
-      - name: Install minimal stable with clippy
+      - name: Install minimal ${{ matrix.toolchain }} with clippy
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
@@ -29,7 +30,10 @@ jobs:
           components: clippy
           override: true
 
-      - name: Check
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.0.0
+
+      - name: CLippy Check
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
