--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,8 @@
 ci:
-  autoupdate: weekly
+  skip: [cargo-fmt, cargo-check, clippy]
+
+default_stages: [commit]
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
@@ -15,19 +18,14 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/kucera-lukas/rusty-battery
-    rev: 62889ddc4203194fa556e88df6dbbd2843eeda1d
+    rev: v0.2.1
     hooks:
       - id: cargo-fmt
       - id: cargo-check
       - id: clippy
 
-  - repo: https://github.com/jorisroovers/gitlint
-    rev: v0.16.0
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
     hooks:
-      - id: gitlint
-        args: [ "--contrib=CT1", "--msg-filename" ]
-
-  - repo: https://github.com/sirosen/check-jsonschema
-    rev: 0.5.1
-    hooks:
-      - id: check-github-workflows
+      - id: prettier
+        name: Prettier
