--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "3.2.22", features = ["derive"] }
 clap-verbosity-flag = "1.0.1"
 battery = "0.7.8"
 notify-rust = "4"
+ctrlc = { version = "3.0", features = ["termination"] }
 cached = "0.39.0"
 thiserror = "1.0.37"
 env_logger = "0.9.0"
