--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
+theme: jekyll-theme-minimal
 title: rusty-battery
 logo: /assets/img/logo.png
 show_downloads: true
-theme: jekyll-theme-minimal
+google_analytics: [G-QCSM8LEE0W]
