--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ theme: jekyll-theme-minimal
 title: rusty-battery
 logo: /assets/img/logo.png
 show_downloads: true
-google_analytics: [G-QCSM8LEE0W]
+google_analytics: G-QCSM8LEE0W
