--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "CLI tool which notifies you when laptop battery reaches a threshold."
 authors = ["Lukas Kucera <lukas.kucera.g@gmail.com>"]
 documentation = "https://rustybattery.lukaskucera.com"
-readme = "README.md"
+readme = "docs/README.md"
 homepage = "https://rustybattery.lukaskucera.com"
 repository = "https://github.com/kucera-lukas/rusty-battery"
 license = "MIT"
